# twitcher

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py  uow.py
app/feed/: crud.py  dependencies.py  mappers.py  router.py  schemes.py
app/oauth/: dependencies.py  helpers.py  middleware.py  oauth.py  router.py  schemes.py  utils.py
app/static/css/: style.css
app/templates/: _base.html  feed.html  news.html  post_detail.html
twitcher/: manage.py
twitcher/jwt_auth/: forms.py  middleware.py  models.py  serializers.py  urls.py  views.py
twitcher/jwt_auth/migrations/: 0001_initial.py
twitcher/jwt_auth/templates/jwt_auth/: base.html  login.html  register.html
twitcher/socialapp/: admin.py  models.py
twitcher/socialapp/migrations/: 0001_initial.py
twitcher/twitcher/: asgi.py  settings.py  urls.py  wsgi.py
